--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "SkyBot",
     "version": "1.0.01",
-    "description": "©Arifzyn-team",
+    "description": "©Red-Cyber",
     "main": "index.js",
     "type": "module",
     "directories": {
